<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mina.eleventh.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_map1"
        android:orderInCategory="100"
        android:title="@string/google_map1"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_map2"
        android:orderInCategory="100"
        android:title="@string/google_map2"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_map3"
        android:orderInCategory="100"
        android:title="@string/google_map3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_you1"
        android:orderInCategory="100"
        android:title="@string/youtube1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_you2"
        android:orderInCategory="100"
        android:title="@string/youtube2"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_you3"
        android:orderInCategory="100"
        android:title="@string/youtube3"
        app:showAsAction="never" />
</menu>
